# sfml_template

./: .gitignore  CMakeLists.txt  Makefile  readme.md
app/: CMakeLists.txt  main.cpp
